still bugs to fix however much better when viewing on mobile devices

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,127 +1,245 @@
 /* Universal Styles */
 
 html {
+  font-family: "Helvetica", sans-serif;
   font-size: 18px;
-  line-height: 1.4;
+  background-color: white;
 }
 
 body {
-  font-family: "Helvetica", sans-serif;
+  line-height: 1.4rem;
 }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 2rem;
 }
 
-h1 {
-  font-weight: bold;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-  font-family: "Helvetica", sans-serif;
-}
-
-/* Nav Bar */
-
-.company {
+.flex {
   display: flex;
-  align-items: center;
-  background-color: cadetblue;
-  color: white;
-
 }
 
-.company .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem 0 1rem 0;
+/* Header */
 
-}
-
-.company img {
-  height: 1.5rem;
-  padding-right: 1rem;
-}
-
-nav span {
-  display: flex;
-  padding: 0 2rem;
-}
-
-/* Main Banner */
-
-.main-banner {
-  background-image: url("../resources/images/glasses-bg.png");
-  background-position: center;
+header {
+  background: url("/Users/alanyoung/Documents/tortoiseshell-optics/resources/images/glasses-bg.png");
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
+  padding-top: 1rem;
   height: 30rem;
 }
 
-.main-banner .headline {
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+nav {
+  padding: 1rem 0;
+  background-color: cadetblue;
+  color: white;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav div {
+  display: flex;
+  align-items: center;
+}
+
+nav img {
+  height: 1.5rem;
+  margin-left: 2rem;
+  margin-right: 1rem;
+}
+
+ul {
+  margin-right: 1rem;
+}
+
+ul li {
+  display: inline;
+  padding: 1rem 1rem;
+}
+
+.truncated-menu {
+  display: none;
+}
+
+@media only screen and (max-width: 640px) {
+  .menu ul {
+    display: none;
+  }
+
+  .menu ul.truncated-menu {
+    display: block;
+  }
+
+  header div span {
+    display: none;
+  }
+
+  header {
+    background-position: 20%;
+    height: 17rem;
+  }
+
+  .main.banner {
+    padding: 0 1rem;
+    margin: 9rem auto 0 auto;
+    width: 100%;
+    text-align: center;
+  }
+
+  .main.banner h1 {
+    font-size: 1rem;
+  }
+
+}
+
+.main.banner {
+  background-color: white;
+  padding: 1.5rem 5rem;
+  display: inline-block;
+  margin-top: 10rem;
+  margin-right: -2rem;
+  line-height: 1.2rem;
+}
+
+header .flex {
   justify-content: flex-end;
 }
 
-.headline {
+@media ony screen and (max-width: 1024px) {
+  header {
+    padding-top: 0;
+    height: 22rem;
+  }
 
-  font-size: 2rem;
-  background-color: white;
-  color: black;
-  line-height: 1.2;
-  padding: 1.5rem 5rem;
-  width: 25rem;
-  position: relative;
-  top: 10rem;
+  nav.container {
+    max-width: 100%;
+  }
+
+  .main.banner {
+    padding: 0.75rem 4rem;
+    margin-top: 5rem;
+    margin-right: 2rem;
+  }
+
+  .main.banner h1 {
+    font-size: 1.33rem;
+  }
 }
 
-/* Products and Business */
 
-.product {
-  height: 8rem;
-  width: 5rem;
-  padding: 3rem 6rem;
-  margin: 3rem 0;
-  display: inline-flex;
+/* Supporting */
+
+.supporting {
+  display: flex;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 640px) {
+  .supporting {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 3rem;
+  }
+}
+
+/* Service */
+
+.service {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-
+  text-align: center;
+  margin: 3rem;
+  width: 5rem;
+  height: 8rem;
 }
 
-.product-image img {
-  max-width: 5rem;
-  max-height: 4.5rem;
+.service img {
+  width: 5rem;
+  margin-bottom: 1rem;
 }
 
-/* Business Info */
+.service img.paper-icon {
+  width: 3.5rem
+}
 
+@media only screen and (max-width: 640px) {
+  .service {
+    height: auto;
+    margin: .77rem;
+    font-size: .77rem;
+  }
+}
 
-.info  {
-  width: 45%;
-  padding: 1rem 5% 0 0;
-  display: inline-flex;
+/* Info */
 
+.info {
+  width: 35%;
+  margin-right: 5%;
+  margin-bottom: 4rem;
+}
+
+.info p {
+  padding: 1rem 0;
 }
 
 .title {
+  max-width: 10rem;
+  padding: 0.5rem 1.25rem;
+  background-color: cadetblue;
   font-weight: bold;
-  font-size: 1rem;
-  border-style: solid;
-  border-radius: 3rem;
-  border-color: cadetblue;
+  color: white;
+}
+
+@media only screen and (max-width: 640px) {
+  .info {
+    width: auto;
+  }
+
+  .info .title {
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+  }
+
+  .info p {
+    padding: 1rem;
+    font-size: .77rem;
+  }
 }
 
 /* Footer */
 
-.footer .container {
-  padding: 4rem;
+footer {
+  background-color: azure;
+  padding: 4rem 2rem;
+  display: flex;
+  align-items: center;
 }
 
-footer {
-  padding-left: 4rem;
-  border-top: 4px;
+footer img {
+  background-color:
+  height: 1.5rem;
+  margin-left: 2rem;
+  margin-right: 1rem;
+}
+
+@media only screen and (max-width: 640px) {
+  footer {
+    justify-content: center;
+  }
+
+  footer div {
+    display: none;
+  }
 }
